[gd_scene load_steps=6 format=3 uid="uid://byp3udu7ppf11"]

[ext_resource type="Script" path="res://assets/ui/end_menu/end_menu.gd" id="1_3drf3"]
[ext_resource type="Texture2D" uid="uid://dlls6bdhvaeuc" path="res://assets/ui/Pixel UI pack 1.png" id="1_x8fam"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ivp20"]
texture = ExtResource("1_x8fam")
texture_margin_left = 12.0
texture_margin_top = 12.0
texture_margin_right = 12.0
texture_margin_bottom = 12.0
region_rect = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1ayf"]
atlas = ExtResource("1_x8fam")
region = Rect2(448, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nga8"]
atlas = ExtResource("1_x8fam")
region = Rect2(480, 224, 32, 32)

[node name="EndMenu" type="CanvasLayer"]
layer = 2
script = ExtResource("1_3drf3")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_ivp20")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -8
alignment = 1

[node name="ScoreHeading" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.541176, 0.282353, 0.211765, 1)
text = "SCORE"
horizontal_alignment = 1

[node name="ScoreValue" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -8
alignment = 1

[node name="BestHeading" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.541176, 0.282353, 0.211765, 1)
text = "BEST"
horizontal_alignment = 1

[node name="BestValue" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1

[node name="NewLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 2
text = "new"
horizontal_alignment = 1

[node name="RetryButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = SubResource("AtlasTexture_a1ayf")
texture_pressed = SubResource("AtlasTexture_1nga8")
